xxx_generator()들을 xxx()로 변경

--- a/material/deep_learning/cnn_cifar10.ipynb
+++ b/material/deep_learning/cnn_cifar10.ipynb
@@ -614,7 +614,7 @@
         "\n",
         "\n",
         "# model.fit(train_x, train_y, epochs=5, verbose=1, batch_size=128)\n",
-        "model.fit_generator(datagen.flow(train_x, train_y, batch_size=128), epochs=5)\n",
+        "model.fit(datagen.flow(train_x, train_y, batch_size=128), epochs=5)\n",
         "\n",
         "\n",
         "\n",
@@ -742,7 +742,7 @@
         "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
         "model.summary()\n",
         "\n",
-        "model.fit_generator(datagen.flow(train_x, train_y, batch_size=128), epochs=5)\n",
+        "model.fit(datagen.flow(train_x, train_y, batch_size=128), epochs=5)\n",
         "\n",
         "\n",
         "loss, acc = model.evaluate(test_x, test_y)\n",
