--- a/material/deep_learning/engine_blade_classification.ipynb
+++ b/material/deep_learning/engine_blade_classification.ipynb
@@ -823,7 +823,7 @@
         ")\n",
         "\n",
         "\n",
-        "model.fit_generator(\n",
+        "model.fit(\n",
         "      train_data_generator,\n",
         "      validation_data=test_data_generator,\n",
         "      steps_per_epoch=train_data_generator.samples/64,  \n",
@@ -831,14 +831,14 @@
         "      epochs=10\n",
         ")\n",
         "\n",
-        "loss, acc = model.evaluate_generator(\n",
+        "loss, acc = model.evaluate(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
         "print(\"loss=\", loss)\n",
         "print(\"acc=\", acc)\n",
         "\n",
-        "y_ = model.predict_generator(\n",
+        "y_ = model.predict(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
