--- a/material/deep_learning/face_emotion_classification.ipynb
+++ b/material/deep_learning/face_emotion_classification.ipynb
@@ -910,7 +910,7 @@
         "outputId": "5049405d-40e5-471c-bd06-2c15fb450f5f"
       },
       "source": [
-        "model.fit_generator(\n",
+        "model.fit(\n",
         "      train_data_generator.flow(train_x, train_y, 32),\n",
         "      validation_data=test_data_generator.flow(test_x, test_y, 32),\n",
         "      steps_per_epoch=len(train_x)/32,  \n",
@@ -992,7 +992,7 @@
         "outputId": "9f651827-ee3f-45c1-f3b5-ef8065bd78a1"
       },
       "source": [
-        "loss, acc = model.evaluate_generator(\n",
+        "loss, acc = model.evaluate(\n",
         "      test_data_generator.flow(test_x, test_y, 32),\n",
         "      steps=len(test_x)/32\n",
         ")\n",
