--- a/material/deep_learning/training_yolo_with_custom_data.ipynb
+++ b/material/deep_learning/training_yolo_with_custom_data.ipynb
@@ -2186,7 +2186,7 @@
         "\n",
         "        batch_size = BATCH_SIZE\n",
         "        print('Train on {} samples, val on {} samples, with batch size {}.'.format(num_train, num_val, batch_size))\n",
-        "        model.fit_generator(data_generator_wrapper(lines[:num_train], batch_size, input_shape, anchors, num_classes),\n",
+        "        model.fit(data_generator_wrapper(lines[:num_train], batch_size, input_shape, anchors, num_classes),\n",
         "                steps_per_epoch=max(1, num_train//batch_size),\n",
         "                validation_data=data_generator_wrapper(lines[num_train:], batch_size, input_shape, anchors, num_classes),\n",
         "                validation_steps=max(1, num_val//batch_size),\n",
@@ -2206,7 +2206,7 @@
         "\n",
         "        batch_size = BATCH_SIZE # note that more GPU memory is required after unfreezing the body\n",
         "        print('Train on {} samples, val on {} samples, with batch size {}.'.format(num_train, num_val, batch_size))\n",
-        "        model.fit_generator(data_generator_wrapper(lines[:num_train], batch_size, input_shape, anchors, num_classes),\n",
+        "        model.fit(data_generator_wrapper(lines[:num_train], batch_size, input_shape, anchors, num_classes),\n",
         "            steps_per_epoch=max(1, num_train//batch_size),\n",
         "            validation_data=data_generator_wrapper(lines[num_train:], batch_size, input_shape, anchors, num_classes),\n",
         "            validation_steps=max(1, num_val//batch_size),\n",
