--- a/material/deep_learning/unet_segementation_color_image.ipynb
+++ b/material/deep_learning/unet_segementation_color_image.ipynb
@@ -6060,7 +6060,7 @@
         "outputId": "48597d5d-5235-4451-f95c-5aa481ba18ed"
       },
       "source": [
-        "hist = model.fit_generator(\n",
+        "hist = model.fit(\n",
         "    train_data_generator,\n",
         "    steps_per_epoch=train_img_generator.samples/64,\n",
         "    validation_data=validation_data_generator,\n",
