--- a/material/deep_learning/real_practice_glaucoma_classification.ipynb
+++ b/material/deep_learning/real_practice_glaucoma_classification.ipynb
@@ -3351,7 +3351,7 @@
         ")\n",
         "\n",
         "\n",
-        "model.fit_generator(\n",
+        "model.fit(\n",
         "      train_data_generator,\n",
         "      validation_data=test_data_generator,\n",
         "      steps_per_epoch=train_data_generator.samples/64,  \n",
@@ -3359,14 +3359,14 @@
         "      epochs=10\n",
         ")\n",
         "\n",
-        "loss, acc = model.evaluate_generator(\n",
+        "loss, acc = model.evaluate(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
         "print(\"loss=\", loss)\n",
         "print(\"acc=\", acc)\n",
         "\n",
-        "y_ = model.predict_generator(\n",
+        "y_ = model.predict(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
@@ -3552,7 +3552,7 @@
         "\n",
         "plot_losses = PlotLosses()     # <--------------------------------------\n",
         "\n",
-        "model.fit_generator(\n",
+        "model.fit(\n",
         "      train_data_generator,\n",
         "      validation_data=test_data_generator,\n",
         "      steps_per_epoch=train_data_generator.samples/64,  \n",
@@ -3561,14 +3561,14 @@
         "      callbacks=[plot_losses]     # <--------------------------------------\n",
         ")\n",
         "\n",
-        "loss, acc = model.evaluate_generator(\n",
+        "loss, acc = model.evaluate(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
         "print(\"loss=\", loss)\n",
         "print(\"acc=\", acc)\n",
         "\n",
-        "y_ = model.predict_generator(\n",
+        "y_ = model.predict(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
@@ -3702,7 +3702,7 @@
         "\n",
         "plot_losses = PlotLosses()\n",
         "\n",
-        "model.fit_generator(\n",
+        "model.fit(\n",
         "      train_data_generator,\n",
         "      validation_data=test_data_generator,\n",
         "      steps_per_epoch=train_data_generator.samples/64,  \n",
@@ -3711,14 +3711,14 @@
         "      callbacks=[plot_losses]\n",
         ")\n",
         "\n",
-        "loss, acc = model.evaluate_generator(\n",
+        "loss, acc = model.evaluate(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
         "print(\"loss=\", loss)\n",
         "print(\"acc=\", acc)\n",
         "\n",
-        "y_ = model.predict_generator(\n",
+        "y_ = model.predict(\n",
         "      test_data_generator,\n",
         "      steps=test_data_generator.samples/64\n",
         ")\n",
