normalization과 성능 파일이름 변경

--- a/material/deep_learning/normalization_and_performance.ipynb
+++ b/material/deep_learning/normalization_and_performance.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "performance_dnn_mnist_normalization.ipynb",
+      "name": "normalization_and_performance.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -37,19 +37,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ferd_0Cx93Fb"
-      },
-      "source": [
-        "# Normalization"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "qfBfbJqOyIkL"
       },
       "source": [
-        "## Normalization을 하지 않으면\n",
+        "# Normalization을 하지 않으면\n",
         "\n",
         "위에서는 0 ~ 255의 값을 0 ~ 1로 normalization하여 학습했다.\n",
         "\n",
@@ -176,7 +167,7 @@
         "id": "ki5TbWWT-DY7"
       },
       "source": [
-        "## -1 ~ 1로 Normalization 하면"
+        "# -1 ~ 1로 Normalization 하면"
       ]
     },
     {
@@ -300,7 +291,7 @@
         "id": "KZyRDXoX_Stx"
       },
       "source": [
-        "## -255 ~ 255로 하면"
+        "# -255 ~ 255로 하면"
       ]
     },
     {
@@ -424,7 +415,7 @@
         "id": "wLZWVTr_Abcy"
       },
       "source": [
-        "## 0 ~ 0.5로 하면"
+        "# 0 ~ 0.5로 하면"
       ]
     },
     {
@@ -548,7 +539,7 @@
         "id": "P7Wm0dNTAuEb"
       },
       "source": [
-        "## 0 ~ 2로 하면"
+        "# 0 ~ 2로 하면"
       ]
     },
     {
