yolo ipynb를 tensorflow 2.x에 동작하도록 수정

--- a/material/deep_learning/training_yolo_with_custom_data.ipynb
+++ b/material/deep_learning/training_yolo_with_custom_data.ipynb
@@ -19,19 +19,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "mz_IWy7f0NjX",
-        "outputId": "0636bc28-87d0-42ae-8160-22576bce8c26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0636bc28-87d0-42ae-8160-22576bce8c26"
       },
       "source": [
-        "!pip3 uninstall keras-nightly\n",
-        "!pip3 uninstall -y tensorflow\n",
-        "!pip3 install keras==2.1.6\n",
-        "!pip3 install tensorflow==1.15.0\n",
+        "# !pip3 uninstall keras-nightly\n",
+        "# !pip3 uninstall -y tensorflow\n",
+        "# !pip3 install keras==2.1.6\n",
+        "# !pip3 install tensorflow==1.15.0\n",
+        "!pip3 uninstall h5py\n",
         "!pip3 install h5py==2.10.0"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +179,7 @@
         "pip uninstall -y keras\n",
         "pip install keras==2.2.4"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,9 +238,10 @@
         "\n",
         "!rm -rf keras-yolo3\n",
         "\n",
-        "!git clone https://github.com/qqwweee/keras-yolo3\n"
+        "# !git clone https://github.com/qqwweee/keras-yolo3\n",
+        "!git clone https://github.com/dhrim/keras-yolo3"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +265,7 @@
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +290,7 @@
         "%cd /content/keras-yolo3\n",
         "!wget https://pjreddie.com/media/files/yolov3.weights"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +343,7 @@
       "source": [
         "!head -40 yolov3.cfg "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +409,7 @@
         "# 실행 \n",
         "%run convert.py yolov3.cfg yolov3.weights yolov3.h5"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,7 +1190,7 @@
       "source": [
         "!ls -al "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1252,7 +1254,7 @@
         "%cd /content/keras-yolo3\n",
         "!wget https://github.com/dhrim/hongik_2021/raw/master/material/deep_learning/dogs_cats_yolo_labeled.zip"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,7 +1293,7 @@
       "source": [
         "!unzip dogs_cats_yolo_labeled.zip"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1771,7 +1773,7 @@
       "source": [
         "!cat dogs_cats_yolo_labeled/cat.99.xml"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1871,7 +1873,7 @@
         "\n",
         "print(\"labels.txt created.\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2118,7 +2120,7 @@
       "source": [
         "!head labels.txt"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2155,7 +2157,7 @@
         "ls -al labels.txt\n",
         "ls -al yolov3.h5"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2226,7 +2228,7 @@
         "ANCHORS_PATH = 'model_data/yolo_anchors.txt'\n",
         "NEW_WEIGHT_PATH = \"new_trained_yolov3.h5\""
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2432,7 +2434,7 @@
         "\n",
         "_main()\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2689,7 +2691,7 @@
         "display(result_image)\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
